--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -10,19 +10,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="112dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="314dp"
+        android:layout_height="106dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="0dp"
-        android:gravity="center"
+        android:layout_marginBottom="10dp"
         android:text="@string/sgpa"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck"
         tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:textColor="@color/black"/>
+        tools:layout_editor_absoluteY="16dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
