--- a/app/src/main/res/layout/activity_7itonly18.xml
+++ b/app/src/main/res/layout/activity_7itonly18.xml
@@ -9,157 +9,117 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#d3c1b1"
         android:orientation="vertical"
-        tools:context=".OptionScreen$activity_3eng21"
+        tools:context=".activity_7itonly18"
         tools:ignore="ExtraText">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="287dp"
+            style="@style/editText"
+            android:layout_width="403dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:text="@string/sgpa"
-            android:textSize="30sp"
+            android:gravity="start"
+            android:text="@string/selected_option"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             android:textStyle="bold"
-            tools:ignore="TextSizeCheck"
-            tools:layout_editor_absoluteX="147dp"
-            tools:layout_editor_absoluteY="16dp" />
+            tools:ignore="TextSizeCheck" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1871"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1872"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1873"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#A1887F" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1874"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1875"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1876"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#A1887F" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal7"
-            android:layout_width="wrap_content"
-            android:layout_height="59dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
             android:gravity="center"
             android:hint="@string/sub1877"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <!-- End of updated EditText views -->
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/button7"
+            style="@style/SubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="1dp"
-            android:backgroundTint="#A1887F"
-            android:text="@string/button"
-            android:textColor="#212121" />
+            android:text="@string/button" />
 
         <TextView
-            android:id="@+id/resultview4"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:id="@+id/resultview7"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="5"
             android:gravity="center"
             android:hint="@string/total"
-            android:textColor="#000000"
-            android:textColorHint="#A1887F"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:ignore="TextContrastCheck" />
+            tools:ignore="TextContrastCheck"
+            style="@style/editText"/>
 
 
     </LinearLayout>
