--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".OptionScreen"
     android:id="@+id/drawer_layout"
-    tools:openDrawer="start"
-    tools:ignore="ExtraText">
+    tools:openDrawer="start">
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="@color/leightWhite"
         android:layout_gravity="start"
-        android:id="@+id/nav_layout"
-        app:menu="@menu/main_menu"/>
+        android:id="@+id/nav_layout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="ExtraText"
+        app:menu="@menu/main_menu">
 
         <ImageView
+            android:id="@+id/main_menu"
             android:layout_width="44dp"
             android:layout_height="39dp"
             android:importantForAccessibility="no"
