--- a/app/src/main/res/layout/activity_8eng21.xml
+++ b/app/src/main/res/layout/activity_8eng21.xml
@@ -14,17 +14,8 @@
 
         <TextView
             android:id="@+id/textView"
-            style="@style/editText"
-            android:layout_width="403dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="start"
-            android:text="@string/selected_option"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:background="@drawable/text_background"
+            style="@style/textview"
             tools:ignore="TextSizeCheck" />
 
         <EditText
@@ -71,16 +62,12 @@
 
         <TextView
             android:id="@+id/resultview8"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_border"
-            android:ems="5"
             android:gravity="center"
             android:hint="@string/total"
             android:textSize="20sp"
-            android:textStyle="bold"
             tools:ignore="TextContrastCheck"
             style="@style/editText"/>
 
