--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -19,17 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:ignore="ExtraText"
-        app:menu="@menu/main_menu">
+        tools:ignore="ExtraText">
 
-        <ImageView
-            android:id="@+id/main_menu"
-            android:layout_width="44dp"
-            android:layout_height="39dp"
-            android:importantForAccessibility="no"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_action_name" />
 
         <TextView
             android:id="@+id/textView"
