--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">48dp</item>
     </style>
+
+    <style name="textview">
+        <item name="android:textColor">@color/leightWhite</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_width">403dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:text">@string/selected_option</item>
+    </style>
 </resources>
