--- a/app/src/main/res/drawable/text_background.xml
+++ b/app/src/main/res/drawable/text_background.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#212121" />
+    <gradient android:angle="90" android:startColor="#434343" android:endColor="#000000" android:type="linear"/>
     <stroke
         android:width="1dp"
         android:color="#000000" /> <!-- Set the border color to a light color, like #CCCCCC -->
-    <corners android:radius="25dp" />
+    <corners android:radius="20dp" />
 </shape>
