--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,34 +3,39 @@
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/edittextcolor</item>
     </style>
 
     <style name="editText">
-        <item name="android:textColorHint">@color/theme</item>
-        <item name="android:textColor">@color/theme</item>
+        <item name="android:textColorHint">@color/edittextcolor</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/montserrat</item>
         <item name="android:inputType">number</item>
         <item name="background">@drawable/edittext_border</item>
         <item name="android:gravity">center</item>
         <item name="android:ems">10</item>
-        <item name="android:layout_width">155dp</item>
+        <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="textview">
-        <item name="android:textColor">@color/leightWhite</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:titleTextColor">@color/black</item>
+        <item name="android:title">12sp</item>
+<!--        <item name="android:gravity">start</item>
         <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginBottom">10dp</item>-->
+<!--        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">48dp</item>
+        <item name="android:minHeight">48dp</item>-->
         <item name="android:text">@string/selected_option</item>
+    </style>
+
+    <style name="ToolbarTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:title">@string/selected_option</item>
+        <item name="android:textSize">15sp</item>
     </style>
 </resources>
