--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,13 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="android:navigationBarColor">@color/theme</item>
-        <item name="colorPrimaryVariant">@color/theme</item>
-        <item name="backgroundColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/nav_status</item>
+        <item name="colorPrimaryVariant">@color/nav_status</item>
+        <item name="android:statusBarColor">@color/nav_status</item>
         <item name="android:windowBackground">@color/leightWhite</item>
         <item name="colorPrimary">@color/theme</item>
         <item name="fontFamily">@font/montserrat</item>
+
     </style>
+
 </resources>
