--- a/app/src/main/res/layout/activity_6eng21.xml
+++ b/app/src/main/res/layout/activity_6eng21.xml
@@ -2,8 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,10 +16,8 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/nav_status"
             android:layout_marginBottom="10dp"
-            />
-
+            android:background="@color/black" />
 
 
         <EditText
@@ -28,83 +25,92 @@
             style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub61"
+            android:importantForAutofill="no"
+            android:minHeight="48dp"
+            android:textCursorDrawable="@color/black" />
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal2"
+            style="@style/editText"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/edittext_border"
+            android:elevation="55dp"
+            android:hint="@string/sub62"
             android:importantForAutofill="no"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal2"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/edittext_border"
-            android:hint="@string/sub62"
-            android:minHeight="48dp"
-            android:importantForAutofill="no"
-            style="@style/editText"/>
-
-        <EditText
             android:id="@+id/editTextNumberDecimal3"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub63"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal4"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub64"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal5"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub65"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal6"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub66"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal7"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub67"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal8"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_border"
+            android:elevation="55dp"
             android:hint="@string/sub68"
             android:importantForAutofill="no"
-            android:minHeight="48dp"
-            style="@style/editText"/>
+            android:minHeight="48dp" />
 
         <!-- End of updated EditText views -->
 
         <Button
             android:id="@+id/button6"
+            style="@style/SubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="1dp"
-            android:text="@string/button"
-            style="@style/SubmitButton"/>
+            android:text="@string/button" />
 
         <TextView
             android:id="@+id/resultview6"
@@ -121,6 +127,14 @@
             android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="TextContrastCheck" />
+
+        <ImageView
+            android:id="@+id/deleteicon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:importantForAccessibility="no"
+            android:src="@drawable/delete" />
 
 
     </LinearLayout>
