--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/edittextcolor</item>
+        <item name="android:textColor">@color/background</item>
     </style>
 
     <style name="editText">
@@ -36,6 +36,6 @@
 
     <style name="ToolbarTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:title">@string/selected_option</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
